# CPU_usage

./: CMakeLists.txt  Main  Main.c  README.md  a.out  makefile  plik
Headers/: Analyser.c  Header.h  Main.c  Makefile  Printer.c  Reader.c  Reader2.c  Watchdog.c  logger.c  plik  sigcatch.c  valgrind-out.txt
LaTeX/: projekt.tex
